--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     
 </head>
 <body>
-    <button onclick="loadVisualization('Files/Diptheria.csv', 'Files/Diptheria_incidence.csv', 'blue', 'red')">DTP</button>
-    <button onclick="loadVisualization('Files/Measels.csv', 'Files/Measels_incidence.csv', 'blue', 'red')">Measels</button>
+    <button onclick="loadVisualization('Files/Diptheria/Diptheria.csv', 'Files/Diptheria/Diptheria_incidence.csv', 'blue', 'red')">DTP</button>
+    <button onclick="loadVisualization('Files/Measels/Measels.csv', 'Files/Measels/Measels_incidence.csv', 'blue', 'red')">Measels</button>
+    <button onclick="loadVisualization('Files/Hepatitis/Hepatitis.csv', 'Files/Hepatitis/Hepatitis_incidence.csv', 'blue', 'red')">Heaptitis</button>
     <div id="chart"></div>
     <script src="script.js"></script>
 </body>
