--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Nikitha Bamunuarachchi" />
   
     <!-- Title -->
-    <title>Task 2.4 Drawing With Data-Scatter Plot</title> 
+    <title>Assignemnt-2</title> 
 
     <!-- D3.js library -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
@@ -19,6 +19,7 @@
     
 </head>
 <body>
+    <h1>Diseases of Australia</h1>
     <button onclick="loadVisualization('Files/Diptheria/Diptheria.csv', 'Files/Diptheria/Diptheria_incidence.csv', 'blue', 'red')">DTP</button>
     <button onclick="loadVisualization('Files/Measels/Measels.csv', 'Files/Measels/Measels_incidence.csv', 'blue', 'red')">Measels</button>
     <button onclick="loadVisualization('Files/Hepatitis/Hepatitis.csv', 'Files/Hepatitis/Hepatitis_incidence.csv', 'blue', 'red')">Heaptitis</button>
