--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Data Visualization" />
     <meta name="keywords" content="HTML, CSS, D3" />
     <meta name="author" content="Nikitha Bamunuarachchi" />
-  
+
     <!-- Title -->
     <title>Assignemnt-2</title> 
 
@@ -20,9 +20,9 @@
 </head>
 <body>
     <h1>Diseases of Australia</h1>
-    <button onclick="loadVisualization('Files/Diptheria/Diptheria.csv', 'Files/Diptheria/Diptheria_incidence.csv', 'blue', 'red')">DTP</button>
-    <button onclick="loadVisualization('Files/Measels/Measels.csv', 'Files/Measels/Measels_incidence.csv', 'blue', 'red')">Measels</button>
-    <button onclick="loadVisualization('Files/Hepatitis/Hepatitis.csv', 'Files/Hepatitis/Hepatitis_incidence.csv', 'blue', 'red')">Heaptitis</button>
+    <button onclick="loadVisualization('Files/Diptheria/Diptheria.csv', 'Files/Diptheria/Diptheria_incidence.csv', 'blue', 'red','DTP')">DTP</button>
+    <button onclick="loadVisualization('Files/Measels/Measels.csv', 'Files/Measels/Measels_incidence.csv', 'blue', 'red','Measles')">Measels</button>
+    <button onclick="loadVisualization('Files/Hepatitis/Hepatitis.csv', 'Files/Hepatitis/Hepatitis_incidence.csv', 'blue', 'red','Hepatitis')">Heaptitis</button>
     <div id="chart"></div>
     <script src="script.js"></script>
 </body>
