--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
 
   
+    <style>
+        .tooltip {
+            position: absolute;
+            text-align: center;
+            width: auto;
+            height: auto;
+            padding: 10px;
+            font: 12px sans-serif;
+            background: lightsteelblue;
+            border: 0px;
+            border-radius: 8px;
+            pointer-events: none;
+            opacity: 0;
+            color: black;
+        }
+    </style>
     
     
 </head>
