--- a/visualizations.html
+++ b/visualizations.html
@@ -18,16 +18,20 @@
     <script src="script.js"></script>
 </head>
 <body onload="fadeIn()">
-    <!-- Navigation Bar -->
-    <nav id="main-nav">
-        <ul class="navbar">
-            <li><button class="nav-button" onclick="fadeOutAndRedirect('main.html')">Home</button></li>
-            <li><button class="nav-button" onclick="showLineChart('DTP')">DTP</button></li>
-            <li><button class="nav-button" onclick="showLineChart('Measles')">Measles</button></li>
-            <li><button class="nav-button" onclick="showLineChart('Hepatitis')">Hepatitis</button></li>
-        </ul>
-    </nav>
-
+   <!-- Navigation Bar -->
+   <nav id="main-nav">
+    <ul class="navbar">
+        <li><button class="nav-button" onclick="fadeOutAndRedirect('main.html')">Home</button></li>
+        <li class="dropdown">
+            <button class="dropbtn">Diseases</button>
+            <div class="dropdown-content">
+                <a href="#" onclick="showLineChart('DTP')">DTP</a>
+                <a href="#" onclick="showLineChart('Measles')">Measles</a>
+                <a href="#" onclick="showLineChart('Hepatitis')">Hepatitis</a>
+            </div>
+        </li>
+    </ul>
+</nav>
     <!-- Visualization Controls -->
  
 
