--- a/visualizations.html
+++ b/visualizations.html
@@ -15,7 +15,9 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <link rel="stylesheet" href="styles.css">
     <script src="transition.js"></script>
-    <script src="script.js"></script>
+    <script src="lineChart.js"></script>
+    <script src="scatterPlot.js"></script>
+    <script src="initializations.js"></script>
 </head>
 <body onload="fadeIn()">
    <!-- Navigation Bar -->
