zoom in feature for scatterPlot

--- a/visualizations.html
+++ b/visualizations.html
@@ -39,9 +39,9 @@
     <div id="chart-container">
         <div id="chart"></div>
         <!-- Container for dynamic buttons -->
+        <div id="dataviz_axisZoom"></div>
         <div id="button-container" class="center"></div>
     </div>
-
     
 
 </body>
