--- a/main.html
+++ b/main.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -17,7 +18,8 @@
     <script src="transition.js"></script>
 </head>
 <body onload="fadeIn()">
-    <h1>Impact of Immunization on Disease Incidence Rates: A Data-Driven Analysis of Diphtheria, Measles, and Hepatitis</h1>
+    <h1>Impact of Immunization on Disease Incidence Rates</h1>
+    <h2>A Data-Driven Analysis of Diphtheria, Measles, and Hepatitis</h2>
    
     <!-- Introduction -->
     <p class="intro-text">
@@ -28,7 +30,32 @@
     <div class="center">
         <button class="view-button" onclick="fadeOutAndRedirect('visualizations.html')">View Visualizations</button>
     </div>
+    
+    <div class="image-container">
+        <img src="images/linechart.png" alt="Image 1">
+        <img src="images/scatterplot.png" alt="Image 2">
+    </div>
+    
+    <!-- Footer Section -->
+    <footer>
+        <div class="footer-section">
+            <h5>About</h5>
+            <p>Nikitha Bamunuarachchi</p>
+            <p>Pavithra Kollipara</p>
+        </div>
+        <div class="footer-section">
+            <h5>Contact</h5>
+            <p>Nikitha: <a href="mailto:number@example.com">105455564@student.swin.edu.au</a></p>
+            <p>Pavithra: <a href="mailto:number@example.com">104556138@student.swin.edu.au</a></p>
+        </div>
+        <div class="footer-section">
+            <h5>Unit Info</h5>
+            <p>Unit Name: Data Visualization</p>
+            <p>Unit Code: COS30045</p>
+            <p>Tutor: Andrew Guthre</p>
+            <p>Convenor: Karola von Baggo</p>
+        </div>
+    </footer>
+
 </body>
 </html>
-
-
