updated home page and footer sections

--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8"/>
     <meta name="description" content="Data Visualization" />
     <meta name="keywords" content="HTML, CSS, D3" />
-    <meta name="author" content="Nikitha Bamunuarachchi" />
+    <meta name="authors" content="Nikitha Bamunuarachchi , Pavithra Kollipara" />
 
     <!-- Title -->
     <title>Assignment-2</title> 
@@ -31,9 +31,28 @@
         <button class="view-button" onclick="fadeOutAndRedirect('visualizations.html')">View Visualizations</button>
     </div>
     
-    <div class="image-container">
-        <img src="images/linechart.png" alt="Image 1">
-        <img src="images/scatterplot.png" alt="Image 2">
+    <div class="container">
+        <div class="top-section">
+            <img src="images/linechart.png" alt="linechart" class="top-image">
+            <div class="text-content">
+                <h4>Background:</h4>
+                <p>
+                    Over the past three decades, public health initiatives have significantly boosted vaccination rates.
+                    These linecharts vividly illustrates the relationship between the immunization coverage and the incidence of three different diseases. 
+                    These linecharts showcase trends that are contruintuitive and really makes the viewer question how much efect immunization is when compared to other factors.
+                </p>
+            </div>
+        </div>
+        <div class="bottom-section">
+            <div class="text-content">
+                <h4>Background:</h4>
+                <p>
+                    This scatterplot underscores the dynamic interplay between immunization coverage and disease prevalence. 
+                    By visualizing individual data points, it allows us to discern patterns and anomalies in the data. 
+                </p>
+            </div>
+            <img src="images/scatterplot.png" alt="scatterplot" class="bottom-image">
+        </div>
     </div>
     
     <!-- Footer Section -->
@@ -46,7 +65,7 @@
         <div class="footer-section">
             <h5>Contact</h5>
             <p>Nikitha: <a href="mailto:number@example.com">105455564@student.swin.edu.au</a></p>
-            <p>Pavithra: <a href="mailto:number@example.com">104556138@student.swin.edu.au</a></p>
+            <p>Pavithra: <a href="mailto:number@example.com">104082905@student.swin.edu.au</a></p>
         </div>
         <div class="footer-section">
             <h5>Unit Info</h5>
