--- a/visualizations.html
+++ b/visualizations.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8"/>
     <meta name="description" content="Data Visualization" />
     <meta name="keywords" content="HTML, CSS, D3" />
-    <meta name="author" content="Nikitha Bamunuarachchi" />
+    <meta name="authors" content="Pavithra Kollipara , Nikitha Bamunuarachchi" />
 
     <!-- Title -->
     <title>Assignment-2 Visualizations</title> 
@@ -44,6 +44,26 @@
             <div id="text-container" class="center"></div>
         </div>
     </div>
+
+    <footer>
+        <div class="footer-section">
+            <h5>About</h5>
+            <p>Nikitha Bamunuarachchi</p>
+            <p>Pavithra Kollipara</p>
+        </div>
+        <div class="footer-section">
+            <h5>Contact</h5>
+            <p>Nikitha: <a href="mailto:number@example.com">105455564@student.swin.edu.au</a></p>
+            <p>Pavithra: <a href="mailto:number@example.com">104082905@student.swin.edu.au</a></p>
+        </div>
+        <div class="footer-section">
+            <h5>Unit Info</h5>
+            <p>Unit Name: Data Visualization</p>
+            <p>Unit Code: COS30045</p>
+            <p>Tutor: Andrew Guthre</p>
+            <p>Convenor: Karola von Baggo</p>
+        </div>
+    </footer>
 
     
 
