--- a/main.html
+++ b/main.html
@@ -29,6 +29,7 @@
     <!-- Button to View Visualizations -->
     <div class="center">
         <button class="view-button" onclick="fadeOutAndRedirect('visualizations.html')">View Visualizations</button>
+        <button class="view-button" onclick="fadeOutAndRedirect('conclusion.html')">Conclusion</button>
     </div>
     
     <div class="container">
