--- a/visualizations.html
+++ b/visualizations.html
@@ -24,6 +24,7 @@
     <nav id="main-nav">
         <ul class="navbar">
             <li><button class="nav-button" onclick="fadeOutAndRedirect('main.html')">Home</button></li>
+            <li><button class="nav-button" onclick="fadeOutAndRedirect('conclusion.html')">Conclusion</button></li>
         </ul>
     </nav>
 
