added a single range slider

--- a/visualizations.html
+++ b/visualizations.html
@@ -46,6 +46,11 @@
         </div>
     </div>
 
+    <div id="slider-container">
+        <label for="time-slider">Select Time Period: </label>
+        <input type="range" id="time-slider" min="" max="" step="1" value="" oninput="updateTimePeriod(this.value)">
+    </div>
+
     <footer>
         <div class="footer-section">
             <h5>About</h5>
