--- a/visualizations.html
+++ b/visualizations.html
@@ -45,7 +45,7 @@
             <div id="text-container" class="center"></div>
         </div>
     </div>
-
+    <!-- Dual Slider -->
     <div id="slider-wrapper">
         <div id="slider-container">
             <label for="start-slider">Start Date: </label>
@@ -58,6 +58,7 @@
             <span id="start-date"></span> - <span id="end-date"></span>
         </div>
     </div>
+    <!-- Footer Section -->
     <footer>
         <div class="footer-section">
             <h5>About</h5>
